--- a/School/School/School.csproj
+++ b/School/School/School.csproj
@@ -43,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Human\Human.cs" />
+    <Compile Include="Disciplines\Discipline.cs" />
+    <Compile Include="Models\Human.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\Teacher.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schooll.cs" />
+    <Compile Include="School\SchoolClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
