--- a/Training/Dealership_Description/Dealership-Skeleton/Dealership/Dealership.csproj
+++ b/Training/Dealership_Description/Dealership-Skeleton/Dealership/Dealership.csproj
@@ -61,7 +61,7 @@
     <Compile Include="Engine\IEngine.cs" />
     <Compile Include="Factories\DealershipFactory.cs" />
     <Compile Include="Factories\IDealershipFactory.cs" />
-    <Compile Include="Models\Vehicle.cs" />
+    <Compile Include="Models\VeryImportant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
